--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.maryanto.dimas.plugins</groupId>
     <artifactId>web-commons</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.1-FINAL</version>
     <packaging>jar</packaging>
 
     <distributionManagement>
