update script build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ deploy_releash:
   script:
     - 'mvn clean test install deploy'
   only:
-    - /-final$/
+    - /-release$/
   artifacts:
     paths:
       - target/*.jar
