--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ testing-automation:
 code_analys:
   stage: build
   script:
-    - mvn clean package sonar:sonar -Dsonar.host.url=$URL_SONAR -Dsonar.login=$AUTH_SONAR
+    - mvn clean test package sonar:sonar -Dsonar.host.url=$URL_SONAR -Dsonar.login=$AUTH_SONAR
 
 deploy_snapshot:
   stage: deploy
