--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,9 @@ cache:
 code_analys:
   stage: build
   script:
-    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package install sonar:sonar -Dsonar.host.url=$URL_SONAR -Dsonar.login=$AUTH_SONAR -Dmaven.test.failure.ignore=false
+    - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package
+    - mvn install
+    - mvn sonar:sonar -Dsonar.projectKey=$PROJECT_KEY -Dsonar.host.url=$URL_SONAR -Dsonar.login=$AUTH_SONAR -Dmaven.test.failure.ignore=false
 
 deploy_snapshot:
   stage: deploy
