--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,8 @@ code_analys:
     - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package
     - mvn install
     - mvn sonar:sonar -Dsonar.projectKey=$PROJECT_KEY -Dsonar.host.url=$URL_SONAR -Dsonar.login=$AUTH_SONAR -Dmaven.test.failure.ignore=false
+  only:
+    - /-release$/
 
 deploy_snapshot:
   stage: deploy
