--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,16 @@
 
     <groupId>com.maryanto.dimas.plugins</groupId>
     <artifactId>web-commons</artifactId>
-    <version>2.0.0-release</version>
+    <version>2.0.1-release</version>
     <packaging>jar</packaging>
 
     <distributionManagement>
         <repository>
-            <id>nexus-developer</id>
+            <id>repository.dimas-maryanto.com</id>
             <url>http://repository.dimas-maryanto.com:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>nexus-developer</id>
+            <id>repository.dimas-maryanto.com</id>
             <url>http://repository.dimas-maryanto.com:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
@@ -24,17 +24,27 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.2</version>
+            <version>1.18.8</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
-            <version>1.2.0.Final</version>
+            <version>1.3.0.Final</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-jdk8</artifactId>
-            <version>1.2.0.Final</version>
+            <version>1.3.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
         </dependency>
 
         <dependency>
@@ -49,9 +59,13 @@
         <finalName>${artifactId}-${version}</finalName>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.2</version>
+                <version>0.8.4</version>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -108,7 +122,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <serverId>nexus</serverId>
+                    <serverId>repository.dimas-maryanto.com</serverId>
                     <nexusUrl>http://repository.dimas-maryanto.com:8081/</nexusUrl>
                     <skipStaging>true</skipStaging>
                 </configuration>
