--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ cache:
     - .m2/repository
 
 code_analys:
+  image: repository.dimas-maryanto.com:8086/maven:3.6-jdk-8
   stage: build
   script:
     - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package
@@ -18,6 +19,7 @@ code_analys:
     - /-release$/
 
 deploy_snapshot:
+  image: repository.dimas-maryanto.com:8086/maven:3.6-jdk-8
   stage: deploy
   script:
     - 'mvn clean install deploy'
@@ -28,6 +30,7 @@ deploy_snapshot:
       - target/*.jar
 
 deploy_releash:
+  image: repository.dimas-maryanto.com:8086/maven:3.6-jdk-8
   stage: deploy
   script:
     - 'mvn clean install deploy'
