--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
+image: maven:3.6-jdk-8
+
 stages:
-  - test
   - build
-  - package
   - deploy
 
 cache:
@@ -9,7 +9,6 @@ cache:
     - .m2/repository
 
 code_analys:
-  image: repository.dimas-maryanto.com:8086/maven:3.6-jdk-8
   stage: build
   script:
     - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent package
@@ -19,7 +18,6 @@ code_analys:
     - /-release$/
 
 deploy_snapshot:
-  image: repository.dimas-maryanto.com:8086/maven:3.6-jdk-8
   stage: deploy
   script:
     - 'mvn clean install deploy'
@@ -30,7 +28,6 @@ deploy_snapshot:
       - target/*.jar
 
 deploy_releash:
-  image: repository.dimas-maryanto.com:8086/maven:3.6-jdk-8
   stage: deploy
   script:
     - 'mvn clean install deploy'
