--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
         <lombok.version>1.18.8</lombok.version>
-        <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <mapstruct.version>1.4.2.Final</mapstruct.version>
         <apache.commons-lang3.version>3.9</apache.commons-lang3.version>
         <junit.version>4.13</junit.version>
         <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
@@ -49,7 +49,7 @@
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct-jdk8</artifactId>
+            <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
         </dependency>
         <dependency>
