--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ code_analys:
   before_script:
     - mvn -s $M2_PROXY_XML $MAVEN_CLI_OPTS versions:set -DnewVersion=$CI_COMMIT_TAG
   script:
-    - mvn $MAVEN_CLI_OPTS -s $M2_PROXY clean jacoco:prepare-agent test jacoco:report
+    - mvn $MAVEN_CLI_OPTS -s $M2_PROXY_XML clean jacoco:prepare-agent test jacoco:report
     - mvn -s $M2_PROXY_XML sonar:sonar -Dsonar.projectKey=$CI_PROJECT_ID-$CI_DEFAULT_BRANCH -Dsonar.host.url=$URL_SONAR -Dsonar.login=$AUTH_SONAR -Dmaven.test.failure.ignore=false
   tags:
     - docker
